cont-stack-jmh-native-access: results (spec, docs), history rows, changelog; cont-stack-read-bounds-once filed; off the sprint
Claude-Session: https://claude.ai/code/session_01VZwf6drLbEaLiAvXi7aDGG